09-November-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/*: Upgrade to Angular 16, added
 Collection search in Collection Management, added visualisation of standalone
 annotations, added Export/Import of all Collections of a user.

 * clarin-angular/src/styles/*:
 * clarin-angular/src/app/ng-matero/*: Updated ng-matero to version 16.

 * backend-django/clarin_backend/mongodb_views.py:
 * backend-django/clarin_backend/sql_views.py:
 * backend-django/clarin_backend/urls.py:
 * backend-django/clarin_backend/utils.py:
 * backend-django/clarin_backend/views.py: Added visualise annotation API.

06-November-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin_backend/sql_views.py:
 * clarin_backend/utils.py:
 * clarin_backend/views.py: Added ability to export all user Collections. Now
 backend API returns all Collection data sorted by name (previously was sorted
 by id).

29-October-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * backend-django/clarin_backend/sql_views.py:
 * backend-django/clarin_backend/urls.py:
 * backend-django/clarin_backend/utils.py:
 * backend-django/vast_rdf/vast_repository.py:
 * clarin-angular/package.json
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.ts:
 * clarin-angular/src/app/services/collection-service/collection-service.service.ts:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json: Added ability to export all
 Collections.

26-July-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/views/annotation/annotation.component.html:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts: