@@ -1,0 +1,5 @@
+<div class="annotator-widget-values-schwartz h-full">
+  <highcharts-chart class="h-full" [Highcharts]="Highcharts" [options]="chartOptionsPie"
+    (chartInstance)="setChartInstancePie($event)">
+  </highcharts-chart>
+</div>
